[gd_scene load_steps=7 format=3 uid="uid://5l67trp6jxuj"]

[ext_resource type="Texture2D" uid="uid://cm5lb1bi11657" path="res://ArtAssets/UI/UIPage.png" id="1_ixgaj"]
[ext_resource type="Script" path="res://UI/assignment_menu.gd" id="1_nvwk8"]
[ext_resource type="Texture2D" uid="uid://c1wv18vpvs6d0" path="res://ArtAssets/UI/assignment_icon.png" id="2_42khg"]
[ext_resource type="PackedScene" uid="uid://b13m7ybp1isac" path="res://UI/title_holder.tscn" id="3_5jcs3"]
[ext_resource type="Theme" uid="uid://bgr6frj5j5a2w" path="res://UI/label_theme.tres" id="4_jr2u4"]
[ext_resource type="PackedScene" uid="uid://lisxvkd8i4da" path="res://UI/menu_button_base.tscn" id="6_fisxy"]

[node name="assignment_menu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nvwk8")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 48.0
offset_bottom = 62.0
texture = ExtResource("1_ixgaj")

[node name="button_holder" type="VBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="icon" type="TextureRect" parent="background/button_holder"]
custom_minimum_size = Vector2(8, 11)
layout_mode = 2
texture = ExtResource("2_42khg")
stretch_mode = 5

[node name="title_holder" parent="background/button_holder" instance=ExtResource("3_5jcs3")]
layout_mode = 2

[node name="Label" parent="background/button_holder/title_holder/TitleBanner" index="0"]
text = "Location name"

[node name="assignment" type="Label" parent="background/button_holder"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_jr2u4")
theme_override_font_sizes/font_size = 3
text = "Assignment: None"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="requirements" type="Label" parent="background/button_holder"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_jr2u4")
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 3
text = "Tool Requirements: None"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="output_title" type="Label" parent="background/button_holder"]
visible = false
texture_filter = 1
layout_mode = 2
theme = ExtResource("4_jr2u4")
theme_override_font_sizes/font_size = 3
text = "Available Output:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="scrollbox" type="ScrollContainer" parent="background/button_holder"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="background/button_holder/scrollbox"]
layout_mode = 2
columns = 4

[node name="close_holder" parent="background/button_holder" instance=ExtResource("6_fisxy")]
layout_mode = 2
button_text = "Close"

[node name="p_move_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="pressed" from="background/button_holder/close_holder/NinePatchRect/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="p_move_timer" to="." method="_on_timer_timeout"]

[editable path="background/button_holder/title_holder"]
[editable path="background/button_holder/close_holder"]
